// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-props-usage adjust-lines.any 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:30:47.397Z,
    "dateModified": 2020-04-14T04:54:08.375Z,
    "package": "ffc4ac3ba43ec1be266cad947b2f86da",
    "title": "Story",
  },
  "packages": Object {
    "ffc4ac3ba43ec1be266cad947b2f86da": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "ffc4ac3ba43ec1be266cad947b2f86da",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/adjust-lines.any",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 25,
                  "line": 0,
                },
                "start": Object {
                  "column": 20,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 52,
          "line": 5,
        },
        "start": Object {
          "column": 23,
          "line": 5,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
}

export const myStory = props => (
  <Story
   {...props}
  />
);
",
}
`;

exports[`csf-props-usage age-and-name.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-22T21:21:32.851Z,
    "dateModified": 2020-04-14T04:54:23.287Z,
    "package": "c5a370511cc0218343bb8737202ef010",
    "title": "Story",
  },
  "packages": Object {
    "c5a370511cc0218343bb8737202ef010": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "c5a370511cc0218343bb8737202ef010",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/age-and-name.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 32,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ name, age }) => (
  <h2>{\`Hello, my name is \${name}, and I am \\\\\${age} years old.\`}</h2>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ name, age }) => (
  <h2>{\`Hello, my name is \${name}, and I am \\\\\${age} years old.\`}</h2>
);
",
}
`;

exports[`csf-props-usage empty-body.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:55:50.653Z,
    "dateModified": 2020-04-14T04:54:29.351Z,
    "package": "4064ec5efd359839029e7b5b1133b093",
    "title": "Story",
  },
  "packages": Object {
    "4064ec5efd359839029e7b5b1133b093": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "4064ec5efd359839029e7b5b1133b093",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/empty-body.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 14,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 39,
          "line": 4,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ name }) => name",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ name }) => name;
",
}
`;

exports[`csf-props-usage expression.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:56:33.405Z,
    "dateModified": 2020-04-14T04:54:35.381Z,
    "package": "7b181249391840a51b508d46d7014607",
    "title": "Story",
  },
  "packages": Object {
    "7b181249391840a51b508d46d7014607": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "7b181249391840a51b508d46d7014607",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/expression.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "selectProp": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "value",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 30,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 25,
                        "line": 1,
                      },
                    },
                    "name": "value",
                  },
                  "shorthand": true,
                },
              ],
              "value": "value",
            },
          ],
        },
      ],
      "id": "selectProp",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 26,
          "line": 5,
        },
      },
      "name": "selectProp",
      "source": "({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const selectProp = ({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
);
",
}
`;

exports[`csf-props-usage multiple-usage.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:35:27.602Z,
    "dateModified": 2020-04-14T04:54:40.682Z,
    "package": "4f1494e57cbb2a4f7c12aed1051981f7",
    "title": "Story",
  },
  "packages": Object {
    "4f1494e57cbb2a4f7c12aed1051981f7": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "4f1494e57cbb2a4f7c12aed1051981f7",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/multiple-usage.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 31,
                      "line": 2,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 2,
                    },
                  },
                  "shorthand": undefined,
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 10,
        },
        "start": Object {
          "column": 23,
          "line": 5,
        },
      },
      "name": "myStory",
      "source": "({ age }) => (
  <>
    <Story name={name} age={age} />
    <Age value={age} />
  </>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const myStory = ({ age }) => (
  <>
    <Story name={name} age={age} />
    <Age value={age} />
  </>
);
",
}
`;

exports[`csf-props-usage nested-arguments.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:57:55.186Z,
    "dateModified": 2020-04-14T04:54:55.834Z,
    "package": "d6d5de902adc6735a01fb686ce37ae49",
    "title": "Story",
  },
  "packages": Object {
    "d6d5de902adc6735a01fb686ce37ae49": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "d6d5de902adc6735a01fb686ce37ae49",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/nested-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 45,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "height",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "height",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 17,
                  "line": 0,
                },
                "start": Object {
                  "column": 11,
                  "line": 0,
                },
              },
              "name": "weight",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 37,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 31,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "weight",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 43,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "style",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 34,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 0,
                    },
                  },
                  "name": "border",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 53,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 47,
                          "line": 1,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "border",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 41,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 36,
                      "line": 0,
                    },
                  },
                  "name": "color",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 67,
                          "line": 1,
                        },
                        "start": Object {
                          "column": 62,
                          "line": 1,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "color",
                },
              ],
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 21,
          "line": 4,
        },
      },
      "name": "story",
      "source": "({ height, weight, style: { border, color } }) => (
  <div height={height} weight={weight} border={border} color={color} />
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const story = ({ height, weight, style: { border, color } }) => (
  <div height={height} weight={weight} border={border} color={color} />
);
",
}
`;

exports[`csf-props-usage props.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:28:57.636Z,
    "dateModified": 2020-04-14T04:55:00.978Z,
    "package": "9b973e60ccd44eca213366559d66d7f9",
    "title": "Story",
  },
  "packages": Object {
    "9b973e60ccd44eca213366559d66d7f9": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "9b973e60ccd44eca213366559d66d7f9",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/props.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 25,
                  "line": 0,
                },
                "start": Object {
                  "column": 20,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 52,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = props => <Story {...props} />;
",
}
`;

exports[`csf-props-usage select-prop.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-04-12T22:49:30.097Z,
    "dateModified": 2020-04-14T04:55:05.440Z,
    "package": "69085843bbfbfeca925c27eaa81f4255",
    "title": "Story",
  },
  "packages": Object {
    "69085843bbfbfeca925c27eaa81f4255": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "69085843bbfbfeca925c27eaa81f4255",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/select-prop.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 17,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "showOptional",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 7,
                      "line": 4,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "showOptional",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 12,
        },
        "start": Object {
          "column": 21,
          "line": 5,
        },
      },
      "name": "story",
      "source": "({ showOptional }) => {
  return (
    <>
      <div>I must be here</div>
      {showOptional === 'yes' ? <div>Optional, I can disappear</div> : null}
    </>
  );
}",
    },
  },
  "transformed": "import React from 'react';
export default {
  title: 'Story',
};
export const story = ({ showOptional }) => {
  return (
    <>
      <div>I must be here</div>
      {showOptional === 'yes' ? <div>Optional, I can disappear</div> : null}
    </>
  );
};
",
}
`;

exports[`csf-props-usage shorthand.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-05-04T23:15:27.474Z,
    "dateModified": 2020-05-04T23:17:26.650Z,
    "package": "021a076b10c39bcebc473be549b1ee37",
    "title": "Story",
  },
  "packages": Object {
    "021a076b10c39bcebc473be549b1ee37": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "021a076b10c39bcebc473be549b1ee37",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/shorthand.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "value",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 25,
                      "line": 1,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 30,
                        "line": 1,
                      },
                      "start": Object {
                        "column": 25,
                        "line": 1,
                      },
                    },
                    "name": "value",
                  },
                  "shorthand": true,
                },
              ],
              "value": "value",
            },
          ],
        },
      ],
      "id": "story",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 21,
          "line": 5,
        },
      },
      "name": "story",
      "source": "({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};

export const story = ({ value }) => (
  <div>{JSON.stringify({ value }, null, 2)}</div>
);
",
}
`;

exports[`csf-props-usage string-template.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:37:18.785Z,
    "dateModified": 2020-04-14T04:55:10.106Z,
    "package": "75bf41a934d806dca21a97fd172732b2",
    "title": "Story",
  },
  "packages": Object {
    "75bf41a934d806dca21a97fd172732b2": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "75bf41a934d806dca21a97fd172732b2",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/string-template.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "text",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 7,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 0,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 7,
                        "line": 0,
                      },
                      "start": Object {
                        "column": 3,
                        "line": 0,
                      },
                    },
                    "name": "text",
                  },
                  "shorthand": true,
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "text",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 46,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ text }) => \`\${text}\`",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ text }) => \`\${text}\`;
",
}
`;

exports[`csf-props-usage three-levels-alias.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:36:38.187Z,
    "dateModified": 2020-04-14T04:55:14.879Z,
    "package": "f15f16976f949a287047f5150a4e389b",
    "title": "Story",
  },
  "packages": Object {
    "f15f16976f949a287047f5150a4e389b": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "f15f16976f949a287047f5150a4e389b",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/three-levels-alias.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 16,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 0,
                    },
                  },
                  "name": "first",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 23,
                          "line": 2,
                        },
                        "start": Object {
                          "column": 18,
                          "line": 2,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 22,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 0,
                    },
                  },
                  "name": "last",
                  "usage": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 35,
                          "line": 2,
                        },
                        "start": Object {
                          "column": 31,
                          "line": 2,
                        },
                      },
                      "shorthand": undefined,
                    },
                  ],
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 29,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 3,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 9,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name: { first, last }, age }) => (
  <>
    <Story first={first} last={last} />
    <Age value={age} />
  </>
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name: { first, last }, age }) => (
  <>
    <Story first={first} last={last} />
    <Age value={age} />
  </>
);
",
}
`;

exports[`csf-props-usage two-arguments.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:32:09.361Z,
    "dateModified": 2020-04-14T04:55:20.541Z,
    "package": "62f38957c77af20d68bd5801c24f8b59",
    "title": "Story",
  },
  "packages": Object {
    "62f38957c77af20d68bd5801c24f8b59": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "62f38957c77af20d68bd5801c24f8b59",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/two-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 36,
                  "line": 0,
                },
                "start": Object {
                  "column": 31,
                  "line": 0,
                },
              },
              "shorthand": undefined,
            },
          ],
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 63,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "(props, context) => <Story {...props} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = (props, context) => <Story {...props} />;
",
}
`;

exports[`csf-props-usage two-levels-alias.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:35:59.864Z,
    "dateModified": 2020-04-14T04:55:26.189Z,
    "package": "7e3401122fcb7b7f4b3c7e120c34e92e",
    "title": "Story",
  },
  "packages": Object {
    "7e3401122fcb7b7f4b3c7e120c34e92e": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "7e3401122fcb7b7f4b3c7e120c34e92e",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/two-levels-alias.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 31,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 28,
                      "line": 1,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 6,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name: MyName, age }) => (
  <Story name={MyName} age={age} />
)",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name: MyName, age }) => (
  <Story name={MyName} age={age} />
);
",
}
`;

exports[`csf-props-usage two-levels-sub-arguments.js 1`] = `
Object {
  "components": Object {},
  "doc": Object {
    "components": Object {},
    "componentsLookup": Object {},
    "date": 2020-03-07T05:34:24.818Z,
    "dateModified": 2020-04-14T04:55:31.191Z,
    "package": "bdf69aec7471937b5f9dfb459bcdc942",
    "title": "Story",
  },
  "packages": Object {
    "bdf69aec7471937b5f9dfb459bcdc942": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.5.1",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "resolve": "^1.15.1",
        "typescript": "^3.8.3",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.5.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^25.1.2",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^24.9.0",
      },
      "fileHash": "bdf69aec7471937b5f9dfb459bcdc942",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/props-usage/two-levels-sub-arguments.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.5.4",
    },
  },
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 36,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 32,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 46,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 43,
                      "line": 0,
                    },
                  },
                  "shorthand": undefined,
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "id": "myStory",
      "loc": Object {
        "end": Object {
          "column": 73,
          "line": 4,
        },
        "start": Object {
          "column": 23,
          "line": 4,
        },
      },
      "name": "myStory",
      "source": "({ name, age }) => <Story name={name} age={age} />",
    },
  },
  "transformed": "export default {
  title: 'Story',
};
export const myStory = ({ name, age }) => <Story name={name} age={age} />;
",
}
`;
